Первый опыт реализации отрисовки карты через Visual-ы

--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="EMapNavigator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:m="clr-namespace:MapVisualization;assembly=MapVisualization"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <m:MapView />
     </Grid>
 </Window>
