--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -12,5 +12,10 @@
         </Grid.RowDefinitions>
         <m:MapView Name="map" Grid.Row="0" Margin="2" />
         <Button Grid.Row="1" Content="yo" Margin="2" Click="Button_Click" />
+        <Border Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Background="#70ffffff" Padding="3,1">
+            <TextBlock>
+                <Run Text="{Binding ElementName=map, Path=CentralPoint, Mode=OneWay}" />
+            </TextBlock>
+        </Border>
     </Grid>
 </Window>
