--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -10,7 +10,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <m:MapView Name="map" Grid.Row="0" Margin="2" />
+        <m:MapView Name="map" Grid.Row="0" Margin="2" GeographicMouseClick="Map_OnGeographicMouseClick" />
         <Button Grid.Row="1" Content="yo" Margin="2" Click="Button_Click" />
         <Border Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Background="#70ffffff" Padding="3,1">
             <TextBlock>
