--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -9,11 +9,11 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <m:MapView Name="map" Grid.Row="0" Margin="2" GeographicMouseClick="Map_OnGeographicMouseClick" />
+        <m:MapView Name="Map" Grid.Row="0" Margin="2" Click="Map_OnClick" />
         <Button Grid.Row="1" Content="yo" Margin="2" Click="Button_Click" />
         <Border Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Background="#70ffffff" Padding="3,1">
             <TextBlock>
-                <Run Text="{Binding ElementName=map, Path=CentralPoint, Mode=OneWay}" />
+                <Run Text="{Binding ElementName=Map, Path=CentralPoint, Mode=OneWay}" />
             </TextBlock>
         </Border>
     </Grid>
