--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -10,11 +10,14 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <m:MapView Name="Map" Grid.Row="0" Margin="2" Click="Map_OnClick" />
-        <Button Grid.Row="1" Content="yo" Margin="2" Click="Button_Click" />
         <Border Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Background="#70ffffff" Padding="3,1">
             <TextBlock>
                 <Run Text="{Binding ElementName=Map, Path=CentralPoint, Mode=OneWay}" />
             </TextBlock>
         </Border>
+        <ToolBar Grid.Row="1">
+            <Button Content="Load Map" Click="Button_Click" />
+            <Button Content="Ride!" Click="RideBase_OnClick" />
+        </ToolBar>
     </Grid>
 </Window>
