--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -32,6 +32,7 @@
                 </StackPanel>
             </Border>
         </StackPanel>
+        <ComboBox x:Name="TrackSelector" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="15" IsReadOnly="True" SelectionChanged="TrackSelector_OnSelectionChanged" />
         <ToolBar Grid.Row="1">
             <Button Content="Load Map" Click="Button_Click" />
             <Button Content="Ride!" Click="RideButton_OnClick" />
