--- a/MsulEmulation/Views/MsulEmulationParametersView.xaml
+++ b/MsulEmulation/Views/MsulEmulationParametersView.xaml
@@ -1,17 +1,23 @@
-﻿<UserControl x:Class="MsulEmulation.Views.MsulParametersView"
+﻿<UserControl x:Class="MsulEmulation.Views.MsulEmulationParametersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:MsulEmulation.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MsulParametersViewModel}">
+             xmlns:views="clr-namespace:MsulEmulation.Views"
+             d:DataContext="{d:DesignInstance viewModels:MsulEmulationParametersViewModel}">
     <Grid>
 
         <Grid.Resources>
             <Style TargetType="FrameworkElement">
                 <Setter Property="Margin" Value="2" />
             </Style>
-            <Style TargetType="ToggleButton" BasedOn="{StaticResource {x:Type FrameworkElement}}" />
+            <Style TargetType="Button" BasedOn="{StaticResource {x:Type FrameworkElement}}">
+                <Setter Property="Padding" Value="8, 2" />
+            </Style>
+            <Style TargetType="ToggleButton" BasedOn="{StaticResource {x:Type FrameworkElement}}">
+                <Setter Property="Padding" Value="8, 2" />
+            </Style>
             <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type FrameworkElement}}" />
             <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type FrameworkElement}}" />
             <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type FrameworkElement}}">
@@ -69,7 +75,13 @@
                   ItemsSource="{Binding Carriages}" SelectedIndex="0" DisplayMemberPath="Number" />
 
         <ContentPresenter Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
-                          Content="{Binding ElementName=CarriageSelector, Path=SelectedItem}" />
-        
+                          Content="{Binding ElementName=CarriageSelector, Path=SelectedItem}">
+            <ContentPresenter.Resources>
+                <DataTemplate DataType="{x:Type viewModels:CarriageParametersViewModel}">
+                    <views:CarriageParametersModel />
+                </DataTemplate>
+            </ContentPresenter.Resources>
+        </ContentPresenter>
+
     </Grid>
 </UserControl>
