Представление для параметров вагона. Параметры вагонов теперь отображаются все, в столбик

--- a/MsulEmulation/Views/CarriageParametersModel.xaml
+++ b/MsulEmulation/Views/CarriageParametersModel.xaml
@@ -3,8 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d">
-    <StackPanel>
-        
-    </StackPanel>
+             xmlns:viewModels="clr-namespace:MsulEmulation.ViewModels"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance viewModels:CarriageParametersViewModel}">
+    <GroupBox Header="{Binding Number}" HeaderStringFormat="Вагон {0}">
+        <StackPanel>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="Температура в салоне:" />
+                <TextBox Width="34" Grid.Column="1" Text="{Binding IndoorTemperature, StringFormat=F1}" TextAlignment="Center" />
+            </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <ToggleButton Grid.Column="0" Content="Туалет 1" IsChecked="{Binding Toilet1Occupied}" />
+                <ToggleButton Grid.Column="1" Content="Туалет 2" IsChecked="{Binding Toilet2Occupied}" />
+            </Grid>
+        </StackPanel>
+    </GroupBox>
 </UserControl>
