--- a/EMapNavigator/MainWindow.xaml
+++ b/EMapNavigator/MainWindow.xaml
@@ -30,15 +30,17 @@
             </ItemsControl.ItemsPanel>
         </ItemsControl>
         <Border DockPanel.Dock="Right" BorderThickness="1,0,0,0" BorderBrush="#FF8D3300" Padding="3">
-            <ItemsControl regions:RegionManager.RegionName="Emulators" />
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <ItemsControl regions:RegionManager.RegionName="Emulators" />
+            </ScrollViewer>
         </Border>
         <Grid>
             <ContentControl regions:RegionManager.RegionName="Map" />
-            <Rectangle VerticalAlignment="Top" Height="7" >
+            <Rectangle VerticalAlignment="Top" Height="7">
                 <Rectangle.Fill>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#33000000" Offset="0.01"/>
-                        <GradientStop Color="#00000000" Offset="1"/>
+                        <GradientStop Color="#33000000" Offset="0.01" />
+                        <GradientStop Color="#00000000" Offset="1" />
                     </LinearGradientBrush>
                 </Rectangle.Fill>
             </Rectangle>
