--- a/MapViewer.Emulation.Blok/Views/BlokEmulationView.xaml
+++ b/MapViewer.Emulation.Blok/Views/BlokEmulationView.xaml
@@ -3,16 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Width="150">
+             xmlns:viewModels="clr-namespace:MapViewer.Emulation.Blok.ViewModels"
+             mc:Ignorable="d" Width="150" d:DataContext="{d:DesignInstance viewModels:BlokEmulationViewModel}">
     <Grid>
         <GroupBox Header="Эмуляция БЛОК" Padding="4">
             <StackPanel>
                 <TextBlock Text="Эмулировать сообщения ЭК-СНС" TextWrapping="Wrap" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <RadioButton Grid.Column="0" Content="Вкл" GroupName="EmulationEnabled"
+                                 IsChecked="{Binding EmulationEnabled}" />
+                    <RadioButton Grid.Column="1" Content="Выкл" GroupName="EmulationEnabled"
+                                 IsChecked="True" />
+                </Grid>
                 <TextBlock TextWrapping="Wrap" Opacity="0.6">
                     <Run Text="ID:" />
                     <Run Text="0x5c0" FontFamily="Lucida Console" />
                 </TextBlock>
-                <ToggleButton Content="Включить" IsChecked="{Binding EmulationEnabled}" Margin="2" Padding="3" />
             </StackPanel>
         </GroupBox>
     </Grid>
