--- a/MapViewer.Emulation/Views/SpeedControlView.xaml
+++ b/MapViewer.Emulation/Views/SpeedControlView.xaml
@@ -14,6 +14,9 @@
                 </TextBlock>
                 <TextBlock>
                     Дистанция: <Run Text="{Binding Disstance, StringFormat={}{0:F1}, Mode=OneWay}" />м
+                    <Hyperlink Command="{Binding ResetDisstance}">
+                        <Run Text="reset" />
+                    </Hyperlink>
                 </TextBlock>
             </StackPanel>
         </Border>
