Возможность установки флага достоверности данных

--- a/MapViewer.Emulation.Blok/Views/BlokEmulationView.xaml
+++ b/MapViewer.Emulation.Blok/Views/BlokEmulationView.xaml
@@ -14,11 +14,10 @@
                         <ColumnDefinition />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <RadioButton Grid.Column="0" Content="Вкл" GroupName="EmulationEnabled"
-                                 IsChecked="{Binding EmulationEnabled}" />
-                    <RadioButton Grid.Column="1" Content="Выкл" GroupName="EmulationEnabled"
-                                 IsChecked="True" />
+                    <RadioButton Grid.Column="0" Margin="2" Content="Вкл"  IsChecked="{Binding EmulationEnabled}" />
+                    <RadioButton Grid.Column="1" Margin="2" Content="Выкл" IsChecked="True" />
                 </Grid>
+                <CheckBox Content="Достоверность" IsChecked="{Binding Reliability}" Margin="2" />
                 <TextBlock TextWrapping="Wrap" Opacity="0.6">
                     <Run Text="ID:" />
                     <Run Text="0x5c0" FontFamily="Lucida Console" />
