--- a/MsulEmulation/Views/MsulEmulationParametersView.xaml
+++ b/MsulEmulation/Views/MsulEmulationParametersView.xaml
@@ -37,7 +37,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
 
