--- a/MapViewer.Emulation.Msul/Views/MsulEmulationView.xaml
+++ b/MapViewer.Emulation.Msul/Views/MsulEmulationView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="MsulEmulation.Views.MsulEmulationView"
+﻿<UserControl x:Class="MapViewer.Emulation.Msul.Views.MsulEmulationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:views="clr-namespace:MsulEmulation.Views"
-             xmlns:viewModels="clr-namespace:MsulEmulation.ViewModels"
              xmlns:emulation="clr-namespace:MapViewer.Emulation;assembly=MapViewer.Emulation"
+             xmlns:views="clr-namespace:MapViewer.Emulation.Msul.Views"
+             xmlns:viewModels="clr-namespace:MapViewer.Emulation.Msul.ViewModels"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance viewModels:MsulEmulationViewModel}"
              emulation:EmulatorView.EmulatorName="Эмуляция МСУЛ">
     <StackPanel>
