--- a/MapViewer.Emulation.Msul/Views/CarriageParametersModel.xaml
+++ b/MapViewer.Emulation.Msul/Views/CarriageParametersModel.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MsulEmulation.Views.CarriageParametersModel"
+﻿<UserControl x:Class="MapViewer.Emulation.Msul.Views.CarriageParametersModel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:MsulEmulation.ViewModels"
+             xmlns:viewModels="clr-namespace:MapViewer.Emulation.Msul.ViewModels"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance viewModels:CarriageParametersViewModel}">
     <GroupBox Header="{Binding Number}" HeaderStringFormat="Вагон {0}">
         <StackPanel>
