--- a/MapViewer.Emulation.Msul/Views/MsulEmulationParametersView.xaml
+++ b/MapViewer.Emulation.Msul/Views/MsulEmulationParametersView.xaml
@@ -5,7 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:MapViewer.Emulation.Msul.ViewModels"
              xmlns:views="clr-namespace:MapViewer.Emulation.Msul.Views"
+             xmlns:controls="clr-namespace:MapViewer.Emulation.Msul.Views.Controls"
              d:DataContext="{d:DesignInstance viewModels:MsulEmulationParametersViewModel}">
+
+    <UserControl.Resources>
+
+        <DataTemplate DataType="{x:Type viewModels:CarriageParametersViewModel}">
+            <Grid Margin="1" Height="20">
+                <controls:Carriage Position="{Binding Position}" Fill="White" Stroke="DimGray" StrokeThickness="1" />
+                <TextBlock Text="{Binding Number}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="9" Opacity="0.7" />
+            </Grid>
+        </DataTemplate>
+
+
+    </UserControl.Resources>
+
     <Grid>
 
         <Grid.Resources>
@@ -34,6 +48,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -41,17 +56,27 @@
             <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
 
-        <HeaderedContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Header="Номер поезда">
+        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <ItemsControl ItemsSource="{Binding Carriages}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Rows="1" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+        </Grid>
+
+        <HeaderedContentControl Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Header="Номер поезда">
             <TextBox Text="{Binding TrainNumber}" />
         </HeaderedContentControl>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Температура воздуха" />
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding OutdoorTemperature}" />
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="Температура воздуха" />
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding OutdoorTemperature}" />
 
-        <ToggleButton Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+        <ToggleButton Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
                       Content="Аварийная остановка" IsChecked="{Binding EmergencyStop}" />
 
-        <GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Header="Блокировка дверей">
+        <GroupBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Header="Блокировка дверей">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
@@ -62,7 +87,7 @@
             </Grid>
         </GroupBox>
 
-        <GroupBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Header="Открытие дверей">
+        <GroupBox Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Header="Открытие дверей">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
@@ -73,10 +98,10 @@
             </Grid>
         </GroupBox>
 
-        <ToggleButton Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
+        <ToggleButton Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
                       Content="Освещение" IsChecked="{Binding LightOn}" />
 
-        <ItemsControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
+        <ItemsControl Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
                       ItemsSource="{Binding Carriages}">
             <ItemsControl.Resources>
                 <DataTemplate DataType="{x:Type viewModels:CarriageParametersViewModel}">
