--- a/EMapNavigator/Views/SettingsWindow.xaml
+++ b/EMapNavigator/Views/SettingsWindow.xaml
@@ -11,6 +11,9 @@
             <Setter Property="Margin" Value="3" />
         </Style>
         <Style TargetType="{x:Type CheckBox}" BasedOn="{StaticResource {x:Type Control}}" />
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type Control}}">
+            <Setter Property="Padding" Value="4,2" />
+        </Style>
     </Window.Resources>
     <Grid Margin="3">
         <ItemsControl regions:RegionManager.RegionName="Settings" />
