--- a/MapViewer.Emulation.Msul/Views/MsulEmulationSettingsView.xaml
+++ b/MapViewer.Emulation.Msul/Views/MsulEmulationSettingsView.xaml
@@ -1,10 +1,28 @@
 ﻿<UserControl x:Class="MapViewer.Emulation.Msul.Views.MsulEmulationSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d">
-    <Grid>
-            
-    </Grid>
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModels="clr-namespace:MapViewer.Emulation.Msul.ViewModels"
+             xmlns:converters="clr-namespace:MapViewer.Emulation.Msul.Views.Converters"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance viewModels:MsulEmulationSettingsViewModel}">
+    <UserControl.Resources>
+        <converters:IpAddressToStringValueConverter x:Key="IpAddressConverter" />
+        <DataTemplate DataType="{x:Type viewModels:MsulEmissionLinkViewModel}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBox Grid.Column="0" Text="{Binding Path=From, Converter={StaticResource IpAddressConverter}}" />
+                <TextBox Grid.Column="2" Text="{Binding Path=To, Converter={StaticResource IpAddressConverter}}" />
+                <TextBlock Grid.Column="1" Text="→" Margin="2" VerticalAlignment="Center" />
+            </Grid>
+        </DataTemplate>
+    </UserControl.Resources>
+    <StackPanel>
+        <ContentPresenter Content="{Binding Left}" />
+        <ContentPresenter Content="{Binding Right}" />
+    </StackPanel>
 </UserControl>
